@@ -32,17 +32,19 @@ public:
         CombProcessing = Queued | Calculating | Verifying,
 
         NotChecked = 1 << 3, // available for verification
-        Matched = 1 << 4, // checked, checksum matched
-        Mismatched = 1 << 5, // checked, checksum did not match
-        New = 1 << 6, // a file that is present on disk but not in the database
-        Missing = 1 << 7, // not on disk, but present in the database
-        Added = 1 << 8, // item (file path and its checksum) has been added to the database
-        Removed = 1 << 9, // item^ removed from the database
-        Updated = 1 << 10, // the checksum has been updated
-        UnPermitted = 1 << 11, // no read permissions
-        ReadError = 1 << 12, // an error occurred during reading
+        NotCheckedMod = 1 << 4, // same, but the file modif. time was checked and it is later than the db creation
+        Matched = 1 << 5, // checked, checksum matched
+        Mismatched = 1 << 6, // checked, checksum did not match
+        New = 1 << 7, // a file that is present on disk but not in the database
+        Missing = 1 << 8, // not on disk, but present in the database
+        Added = 1 << 9, // item (file path and its checksum) has been added to the database
+        Removed = 1 << 10, // item^ removed from the database
+        Updated = 1 << 11, // the checksum has been updated
+        UnPermitted = 1 << 12, // no read permissions
+        ReadError = 1 << 13, // an error occurred during reading
 
-        CombAvailable = NotChecked | Matched | Mismatched | Added | Updated,
+        CombNotChecked = NotChecked | NotCheckedMod,
+        CombAvailable = CombNotChecked | Matched | Mismatched | Added | Updated,
         CombHasChecksum = CombAvailable | Missing,
         CombUpdatable = New | Missing | Mismatched,
         CombDbChanged = Added | Removed | Updated,
@@ -51,9 +53,9 @@ public:
         CombNewLost = New | Missing,
         CombUnreadable = UnPermitted | ReadError, // present on the disk, but unreadable (no read permission or read error)
 
-        Computed = 1 << 13, // the checksum has been calculated and is ready for further processing (copy or save)
-        ToClipboard = 1 << 14, // the calculated checksum is intended to be copied to the clipboard
-        ToSumFile = 1 << 15, // the calculated checksum is intended to be stored in the summary file
+        Computed = 1 << 14, // the checksum has been calculated and is ready for further processing (copy or save)
+        ToClipboard = 1 << 15, // the calculated checksum is intended to be copied to the clipboard
+        ToSumFile = 1 << 16, // the calculated checksum is intended to be stored in the summary file
     };
     Q_ENUM(FileStatus)
     Q_DECLARE_FLAGS(FileStatuses, FileStatus)
